fix : 컴포넌트별 z-index 수정

--- a/component/common/modal/SearchModal.module.scss
+++ b/component/common/modal/SearchModal.module.scss
@@ -8,7 +8,7 @@
   background-color: white;
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: 9;
+  z-index: 20;
 
   animation-name: appearIn;
   animation-duration: 0.4s;
