--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -64,7 +64,6 @@
       flex-direction: row;
       align-items: center;
       justify-content: flex-end;
-      z-index: 8;
       .wrapper {
         padding-left: 0.625rem;
       }
